Recreated the pdf reader + pdf progress is now linked to individual users
PDF READER
* Is now way more basic but it fucking works
* Change pages using the left and right arrow keys
* Hold ESC to go back to the /home in the same path as the current pdf
DB
* PDF object now has a user field that links the user and the pdf progress
PROTECTET PATHS
* If a user tries to access them they will be sent to /signin
* Fixed bug that allowed users to login to ghost accounts
OVERLAY
* added overlay to /home and /pdf-viewer
* displays user information
* in /pdf-viewer the overlay shows user information + current and total page number
GITIGNORE
* finally fucking made it ignore the database

--- a/styles/css/filebrowser.css
+++ b/styles/css/filebrowser.css
@@ -96,4 +96,55 @@ body {
   display: inline-block;
 }
 
+.rounded {
+  border-radius: 8px;
+}
+
+.shadow {
+  box-shadow: 0 0 16px 0px rgba(0, 0, 0, 0.32);
+}
+
+#useroverlay {
+  position: -webkit-sticky;
+  /* Safari */
+  position: sticky;
+  left: 8px;
+  top: 8px;
+  padding: 8px 16px;
+  background-color: white;
+  width: fit-content;
+}
+#useroverlay p {
+  display: flex;
+  align-items: center;
+}
+#useroverlay a {
+  margin: 0px 8px;
+  color: #1fbec4;
+}
+
+img.circular {
+  border-radius: 50%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Sen", sans-serif;
+}
+*::-webkit-scrollbar {
+  width: 10px;
+  box-shadow: 0 0 16px 0px rgba(0, 0, 0, 0.32);
+}
+*::-webkit-scrollbar-track {
+  background: #68C1EB;
+  border-radius: 20px;
+  box-shadow: 0 0 16px 0px rgba(0, 0, 0, 0.32);
+}
+*::-webkit-scrollbar-thumb {
+  background: #4386B1;
+  border-radius: 20px;
+  box-shadow: 0 0 16px 0px rgba(0, 0, 0, 0.32);
+}
+
 /*# sourceMappingURL=filebrowser.css.map */
