--- a/views/pdf-viewer.handlebars
+++ b/views/pdf-viewer.handlebars
@@ -1,39 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF-Viewer</title>
-    <link rel="stylesheet" type="text/css" href="/css/pdf-viewer.css">
-</head>
-<body>
-    <div id="outline-toggle" class="outline-toggle" onclick="outlineToggle()">
-        <img id="outline-toggle-icon" class="outline-toggle-icon" src="/media/icons/hamburgerMenu.svg" alt="Hamburger menu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/pdf-viewer.css" />
+    <title>PDF Viewer</title>
+  </head>
+  <body>
+    <div id="container" class="container">
+        <div id="useroverlay" class="shadow rounded">
+            <p>
+                {{#if username}}
+                    {{#if profilepicture}}
+                        Welcome<a id="name" name="username">{{username}}</a>
+                        <img src="{{profilepicture}}" name="icon" class="circular" height="32" width="32" placeholder="icon">
+                    {{else}}
+                        Welcome<a id="name" name="username">{{username}}</a>
+                        <img src="https://via.placeholder.com/128/5db3ad/ffffff/?text=?" name="icon" class="circular" height="32" width="32" placeholder="icon">
+                    {{/if}}
+                {{else}}
+                    Welcome<a id="name" name="username">User</a>
+                    <img src="https://via.placeholder.com/128/5db3ad/ffffff/?text=U" name="icon" class="circular" height="32" width="32" placeholder="icon">
+                {{/if}}
+            </p>
+        <div>
+            <p>Page <a id="currentPage"></a> of <a id="totalPages"></a></p>
         </div>
-    <div id="outline" class="outline"></div>
-    <div id="content" class="content"></div>
-</body>
-<footer>
-    <script src="/js/libs/pdf.min.js"></script>
-    <script src="/js/pdf/pdf-rendere.js"></script>
-    <script src="/js/pdf/helper-functions.js"></script>
-    <script src="/js/main.js"></script>
+        </div>
+        <canvas id="pdf-render"></canvas>
+    </div>
     {{#if config}}
-        <script>
-            const cfg = {
-                page: {{Page}},
-                hash: "{{Hash}}"
-            }
-            init("/volume/{{Path}}", document.getElementById("content"))
-        </script>
+    <script>
+        let PDF = {
+            url:                '/volume/{{Path}}',
+            path:               '{{Path}}',
+            user:               '{{username}}',
+            doc:                null,
+            hash:               '{{Hash}}',
+            scale:              2,
+            pageNum:            {{Page}},
+            pageIsRendering:    false,
+            pageNumIsPending:   null
+        }
+    </script>
     {{else}}
-        <script>
-            cfg = {
-                page:1
-            }
-            init("/media/sample.pdf", document.getElementById("content"))
-        </script>
+    <script>
+        let PDF = {
+            url:                './sample.pdf',
+            doc:                null,
+            hash:               '',
+            path:               '',
+            user:               'User',
+            scale:              2,
+            pageNum:            1,
+            pageIsRendering:    false,
+            pageNumIsPending:   null
+        }
+    </script>
     {{/if}}
-</footer>
-
+    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
