FileSetting Backend + minor bug fix in home template
Probably created the backend for creating settings for different file types. This will allow each file to have its own Icon and a specific web app to open it set by the user.
TODO: Finish the front end for settings.

--- a/views/home.pug
+++ b/views/home.pug
@@ -42,14 +42,14 @@ body
                         a.file[href="/home?path="+$file.Path]
                             i.icon.far.fa-folder
                             span.name #{$file.Name}
-                            span.details #{$file.FileCount}
+                            span.details #{$file.FileCount} Items
                     else if $file.Extension == ".pdf"
                         a.file[href="/pdf-viewer?path="+ $file.Path + "&hash=" + $file.Hash]
                             i.icon.far.fa-file-pdf
                             span.name #{$file.Name}
                             span.details #{$file.SizeSI}
                     else
-                        a.file[href="/home?path="+$file.Path]
+                        a.file[href="/volume"+$file.Path]
                             i.icon.far.fa-file-alt
                             span.name #{$file.Name}
                             span.details #{$file.SizeSI}
