--- a/views/home.pug
+++ b/views/home.pug
@@ -45,12 +45,12 @@ body
                             span.details #{$file.FileCount} Items
                     else 
                         if $file.FileSetting.ApplicationLink
-                            a.file[href= $file.FileSetting.ApplicationLink+ "?path="+ $file.Path + "&hash=" + $file.Hash]
+                            a.file[href=$file.FileSetting.ApplicationLink + "?path="+ $file.Path + "&hash=" + $file.Hash]
                                 i[class="icon fiv-viv fiv-icon-"+$file.FileSetting.Icon]
                                 span.name #{$file.Name}
                                 span.details #{$file.SizeSI}
                         else
-                            a.file[href="/vloume"+ $file.Path]
+                            a.file[href="/volume"+ $file.Path]
                                 i[class="icon fiv-viv fiv-icon-"+$file.FileSetting.Icon]
                                 span.name #{$file.Name}
                                 span.details #{$file.SizeSI}
