--- a/views/settings.pug
+++ b/views/settings.pug
@@ -5,5 +5,13 @@ head
   link[rel="stylesheet"][href="./css/style.css"]
   script[src="https://kit.fontawesome.com/74596594bf.js"][crossorigin="anonymous"]
 body
-    div.wrapper.fadeInDown
-        div#formContent
+  div.wrapper.fadeInDown
+    div#formContent
+      div.fadeIn.first
+        p[style="margin-top: 20px"]
+        input#Extension.fadeIn.second[type="text"][name="File Extension"][placeholder="Extension (.pdf, .doc, .jar)"]
+        input#ApplicationLink.fadeIn.third[type="text"][name="ApplicationLink"][placeholder="ApplicationLink"]
+        input#actionButton.fadeIn.fourth[type="submit"][value="Add FileSetting"]
+  script
+    let username = #{user.Username}
+  script[src="./js/settings.js"]
